@@ -2,133 +2,161 @@ package ArielBotos_EytanCabalero2;
 
 import java.util.Objects;
 
-public class Committee implements Comparable{
-    private static final int GROW = 2;
 
-    public String name;
-    public Lecturer chair;
-    public Lecturer[] members;
-    public int memberCount;
+public class Committee implements Comparable {
+    private String name;
+    private Lecturer chair;
+    private Lecturer[] members;
+    private int memberCount;
+    private static final int INITIAL_SIZE = 4;
 
     public Committee(String name, Lecturer chair) {
-        if (name == null || name.isBlank()) throw new IllegalArgumentException("Name empty");
-        this.name = name.trim().toLowerCase();
-        setChair(chair);
-        this.members = new Lecturer[2];
+        if (name == null || name.trim().isEmpty())
+            throw new IllegalArgumentException("Committee name cannot be empty");
+        if (chair == null)
+            throw new IllegalArgumentException("Chair cannot be null");
+        if (!chair.getDegree().canBeChair())
+            throw new InvalidChairException("Lecturer " + chair.getName() + " cannot be chair");
+
+        this.name = name.trim();
+        this.chair = chair;
+        this.members = new Lecturer[INITIAL_SIZE];
         this.memberCount = 0;
+
+        chair.addToCommittee(this);
     }
 
-    public String getName()  { return name; }
-    public Lecturer getChair() { return chair; }
-
-    public void setChair(Lecturer c) {
-        if (c == null || !c.getDegree().canBeChair())
-            throw new InvalidChairException("Chair must be DR or PROF");
-        this.chair = c;
+    public String getName() {
+        return name;
     }
 
-    public boolean addMember(Lecturer m) {
-        if (m == null) return false;
-        for (int i = 0; i < memberCount; i++)
-            if (members[i].equals(m)) return false;
-        if (memberCount == members.length) {
-            Lecturer[] larger = new Lecturer[members.length * GROW];
-            for (int i = 0; i < memberCount; i++) larger[i] = members[i];
-            members = larger;
+    public void setName(String name) {
+        if (name == null || name.trim().isEmpty())
+            throw new IllegalArgumentException("Committee name cannot be empty");
+        this.name = name.trim();
+    }
+
+    public Lecturer getChair() {
+        return chair;
+    }
+
+
+    public void setChair(Lecturer newChair) {
+        if (newChair == null)
+            throw new IllegalArgumentException("Chair cannot be null");
+        if (!newChair.getDegree().canBeChair())
+            throw new InvalidChairException("Lecturer " + newChair.getName() + " cannot be chair");
+
+        if (this.chair != null) {
+            this.chair.removeFromCommittee(this);
         }
-        members[memberCount++] = m;
-        m.addCommittee(this);
-        return true;
+        this.chair = newChair;
+        newChair.addToCommittee(this);
     }
 
-    public boolean removeMember(Lecturer m) {
-        for (int i = 0; i < memberCount; i++) {
-            if (members[i].equals(m)) {
-                for (int j = i; j < memberCount - 1; j++)
-                    members[j] = members[j + 1];
-                memberCount--;
-                m.removeCommittee(this);
-                return true;
-            }
-        }
-        return false;
-    }
 
     public Lecturer[] getMembers() {
+        if (memberCount == 0) {
+            return new Lecturer[0];
+        }
         Lecturer[] copy = new Lecturer[memberCount];
-        for (int i = 0; i < memberCount; i++) copy[i] = members[i];
+        System.arraycopy(members, 0, copy, 0, memberCount);
         return copy;
     }
-    public boolean containsMember(Lecturer lec) {
+
+
+    public boolean addMember(Lecturer l) {
+        if (l == null) {
+            throw new IllegalArgumentException("Lecturer cannot be null");
+        }
+        // בדיקה אם כבר חבר
         for (int i = 0; i < memberCount; i++) {
-            if (members[i].equals(lec)) {
-                return true;
+            if (members[i].equals(l)) {
+                return false;
             }
         }
-        return false;
+        if (memberCount == members.length) {
+            Lecturer[] temp = new Lecturer[members.length * 2];
+            System.arraycopy(members, 0, temp, 0, members.length);
+            members = temp;
+        }
+        members[memberCount++] = l;
+        return l.addToCommittee(this);
     }
 
-    @Override
-    public boolean equals(Object o) {
-        return this == o ||
-                (o instanceof Committee && name.equals(((Committee)o).name));
+
+    public boolean removeMember(Lecturer l) {
+        if (l == null) {
+            throw new IllegalArgumentException("Lecturer cannot be null");
+        }
+        int idx = -1;
+        for (int i = 0; i < memberCount; i++) {
+            if (members[i].equals(l)) {
+                idx = i;
+                break;
+            }
+        }
+        if (idx < 0) {
+            return false;
+        }
+        Lecturer removed = members[idx];
+        System.arraycopy(members, idx + 1, members, idx, memberCount - idx - 1);
+        members[--memberCount] = null;
+        return removed.removeFromCommittee(this);
     }
 
-    @Override public int hashCode() { return Objects.hash(name); }
 
-    @Override
-    public String toString() {
-        return capitalize(name)
-                + " chaired by " + chair.getName()
-                + " [" + memberCount + "]";
-    }
-
-    private static String capitalize(String s) {
-        if (s == null || s.isEmpty()) return s;
-        return Character.toUpperCase(s.charAt(0)) + s.substring(1);
+    public int getTotalSize() {
+        return 1 + memberCount;
     }
 
     @Override
     public int compareTo(Object o) {
+        if (!(o instanceof Committee)) {
+            throw new IllegalArgumentException("Cannot compare Committee with " + o.getClass());
+        }
         Committee other = (Committee) o;
-
-        // 1) Sum articles of chair + members
-        int sumThis = 0, sumOther = 0;
-        if (chair instanceof ResearchLecturer) {
-            sumThis += ((ResearchLecturer) chair).getArticleCount();
+        int thisArticles = 0;
+        if (this.chair instanceof ResearchLecturer) {
+            thisArticles = ((ResearchLecturer) this.chair).getArticleCount();
         }
+        int otherArticles = 0;
         if (other.chair instanceof ResearchLecturer) {
-            sumOther += ((ResearchLecturer) other.chair).getArticleCount();
+            otherArticles = ((ResearchLecturer) other.chair).getArticleCount();
         }
-        for (int i = 0; i < memberCount; i++) {
-            Lecturer m = members[i];
-            if (m instanceof ResearchLecturer) {
-                sumThis += ((ResearchLecturer) m).getArticleCount();
-            }
-        }
-        for (int i = 0; i < other.memberCount; i++) {
-            Lecturer m = other.members[i];
-            if (m instanceof ResearchLecturer) {
-                sumOther += ((ResearchLecturer) m).getArticleCount();
-            }
-        }
-
-
-        int diff = sumThis - sumOther;
-        if (diff != 0) {
-            return diff;
-        }
-
-        // 3) Secondary: compare total lecturers (chair + members)
-        int sizeThis  = 1 + memberCount;
-        int sizeOther = 1 + other.memberCount;
-        return sizeThis - sizeOther;
-    }
-    public int getMemberCount() {
-        return memberCount;
+        int cmp = Integer.compare(thisArticles, otherArticles);
+        if (cmp != 0) return cmp;
+        return Integer.compare(this.getTotalSize(), other.getTotalSize());
     }
 
-    public void setMemberCount(int memberCount) {
-        this.memberCount = memberCount;
+    @Override
+    public boolean equals(Object o) {
+        if (this == o) return true;
+        if (!(o instanceof Committee)) return false;
+        Committee other = (Committee) o;
+        return this.name.equalsIgnoreCase(other.name);
+    }
+
+    @Override
+    public int hashCode() {
+        return Objects.hash(name.toLowerCase());
+    }
+
+    @Override
+    public String toString() {
+        StringBuilder sb = new StringBuilder();
+        sb.append(String.format("Committee: %s  Chair: %s  MembersCount: %d",
+                name,
+                chair.getName(),
+                memberCount));
+        if (memberCount > 0) {
+            sb.append(" (Members: ");
+            for (int i = 0; i < memberCount; i++) {
+                sb.append(members[i].getName());
+                if (i < memberCount - 1) sb.append(", ");
+            }
+            sb.append(")");
+        }
+        return sb.toString();
     }
 }
